syntax = "proto3";
option java_multiple_files = true;
option java_package = "io.homo.proto.entity.test";     // 指定包名
option java_outer_classname = "EntityTest"; // 指定类名

message TestEntityRequest {
  string param = 1;
}

message TestEntityResponse {
  int32 code = 1;
}